# voice-assistant-with-vllm-omni

./: .env.example  .gitignore  README.md
.github/workflows/: images.yml
agent/: Dockerfile  pyproject.toml
agent/src/: agent.py  vllm_realtime.py
deploy/openshift/: agent.yaml  frontend.yaml  kustomization.yaml  livekit.yaml  secret.yaml  vllm.yaml
docs/: vllm-omni-realtime-api-compat.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/token/: route.ts
frontend/components/: VoiceAssistant.tsx
scripts/: start-agent.sh  start-livekit.sh  start-vllm.sh
