[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant-agent"
version = "0.1.0"
description = "Voice assistant LiveKit agent using vLLM-Omni with Qwen3-Omni"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[mcp]~=1.5",
    "mcp>=1.24",
    "livekit-plugins-silero~=1.5",
    "openai",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]
